Updates stats and descriptives

--- a/analysis/stats_from_storyline.ipynb
+++ b/analysis/stats_from_storyline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,75 +165,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Correlation matrix not shown by default, as p = 17 > 12.\n",
-      "Use print(obj, correlation=TRUE)  or\n",
-      "\t vcov(obj)\t if you need it\n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in eval(predvars, data, env): object 'CVS_table' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(predvars, data, env): object 'CVS_table' not found\nTraceback:\n",
+      "1. glmer(main_correct ~ (CVS_table + CVS_graph) * model * variable + \n .     sim_index + pre_correct * model * variable + lab_experience + \n .     similar_sim + prior_number_virtual_labs + (1 | sid), data = mydata, \n .     family = binomial, control = glmerControl(optimizer = \"bobyqa\", \n .         optCtrl = list(maxfun = 200)), nAGQ = 10)",
+      "2. eval(mc, parent.frame(1L))",
+      "3. eval(mc, parent.frame(1L))",
+      "4. lme4::glFormula(formula = main_correct ~ (CVS_table + CVS_graph) * \n .     model * variable + sim_index + pre_correct * model * variable + \n .     lab_experience + similar_sim + prior_number_virtual_labs + \n .     (1 | sid), data = mydata, family = binomial, control = glmerControl(optimizer = \"bobyqa\", \n .     optCtrl = list(maxfun = 200)), nAGQ = 10)",
+      "5. eval(mf, parent.frame())",
+      "6. eval(mf, parent.frame())",
+      "7. stats::model.frame(data = mydata, drop.unused.levels = TRUE, \n .     formula = main_correct ~ (CVS_table + CVS_graph) * model * \n .         variable + sim_index + pre_correct * model * variable + \n .         lab_experience + similar_sim + prior_number_virtual_labs + \n .         (1 + sid))",
+      "8. model.frame.default(data = mydata, drop.unused.levels = TRUE, \n .     formula = main_correct ~ (CVS_table + CVS_graph) * model * \n .         variable + sim_index + pre_correct * model * variable + \n .         lab_experience + similar_sim + prior_number_virtual_labs + \n .         (1 + sid))",
+      "9. eval(predvars, data, env)",
+      "10. eval(predvars, data, env)"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Generalized linear mixed model fit by maximum likelihood (Adaptive\n",
-       "  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]\n",
-       " Family: binomial  ( logit )\n",
-       "Formula: main_statement ~ CVS_context * model + variable + sim_index +  \n",
-       "    pre_statement + lab_experience + similar_sim + prior_number_virtual_labs +  \n",
-       "    (1 | sid)\n",
-       "   Data: mydata\n",
-       "Control: glmerControl(optimizer = \"bobyqa\", optCtrl = list(maxfun = 2e+05))\n",
-       "\n",
-       "     AIC      BIC   logLik deviance df.resid \n",
-       "  1455.2   1553.8   -709.6   1419.2     1758 \n",
-       "\n",
-       "Scaled residuals: \n",
-       "    Min      1Q  Median      3Q     Max \n",
-       "-3.9956 -0.3828 -0.0985  0.5062 11.7598 \n",
-       "\n",
-       "Random effects:\n",
-       " Groups Name        Variance Std.Dev.\n",
-       " sid    (Intercept) 0.2265   0.4759  \n",
-       "Number of obs: 1776, groups:  sid, 148\n",
-       "\n",
-       "Fixed effects:\n",
-       "                           Estimate Std. Error z value Pr(>|z|)    \n",
-       "(Intercept)               -3.460409   0.385205  -8.983  < 2e-16 ***\n",
-       "CVS_context1              -0.349562   0.536913  -0.651  0.51501    \n",
-       "CVS_context2              -1.767162   0.572141  -3.089  0.00201 ** \n",
-       "modelqual                  4.332010   0.320876  13.501  < 2e-16 ***\n",
-       "modelquant                 1.698099   0.308991   5.496 3.89e-08 ***\n",
-       "variableConcentration      0.102152   0.198710   0.514  0.60720    \n",
-       "variableSeparation         0.047988   0.191358   0.251  0.80199    \n",
-       "variableWidth              0.164707   0.197650   0.833  0.40466    \n",
-       "sim_index2                 0.154267   0.138018   1.118  0.26368    \n",
-       "pre_statement1             1.006344   0.177676   5.664 1.48e-08 ***\n",
-       "lab_experience1            0.003557   0.290855   0.012  0.99024    \n",
-       "similar_sim1               0.064791   0.190045   0.341  0.73316    \n",
-       "prior_number_virtual_labs  0.159826   0.095099   1.681  0.09284 .  \n",
-       "CVS_context1:modelqual     0.115307   0.623051   0.185  0.85318    \n",
-       "CVS_context2:modelqual     1.488423   0.616630   2.414  0.01579 *  \n",
-       "CVS_context1:modelquant    0.912243   0.601269   1.517  0.12922    \n",
-       "CVS_context2:modelquant    3.780062   0.607620   6.221 4.94e-10 ***\n",
-       "---\n",
-       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "all_data = mydata\n",
+    "all_data$main_correct[is.na(all_data$main_correct)] <- 0 #replace NA with zero for main correct\n",
+    "all_data$pre_correct[is.na(all_data$pre_correct)] <- 0 #replace NA with zero for main correct\n",
+    "all_data$pre_correct[is.na(all_data$pre_correct)] <- 0 #replace NA with zero for main correct\n",
+    "\n",
+    "all_data$CVS_graph = all_data$CVS_context\n",
+    "all_data$CVS_graph[all_data$CVS_graph==1] <- 0\n",
+    "all_data$CVS_graph[all_data$CVS_graph==2] <- 1\n",
+    "all_data$CVS_table = all_data$CVS_context\n",
+    "all_data$CVS_table[all_data$CVS_table==2] <- 0\n",
     "mixed <- glmer(\n",
-    "    main_statement\n",
-    "    ~  CVS_context*model + variable + sim_index + pre_statement\n",
+    "    main_correct\n",
+    "    ~  (CVS_table+CVS_graph)*model*variable + sim_index + pre_correct*model*variable\n",
     "    + lab_experience + similar_sim + prior_number_virtual_labs + (1 | sid),\n",
     "           data = mydata, family = binomial, \n",
     "           control = glmerControl(optimizer=\"bobyqa\",optCtrl=list(maxfun=200)), nAGQ = 10)\n",
@@ -250,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +468,7 @@
       "Warning message in commonArgs(par, fn, control, environment()):\n",
       "\"maxfun < 10 * length(par)^2 is not recommended.\"Warning message in optwrap(optimizer, devfun, start, rho$lower, control = control, :\n",
       "\"convergence code 1 from bobyqa: bobyqa -- maximum number of function evaluations exceeded\"Warning message in checkConv(attr(opt, \"derivs\"), opt$par, ctrl = control$checkConv, :\n",
-      "\"Model failed to converge with max|grad| = 0.681577 (tol = 0.001, component 1)\"\n",
+      "\"Model failed to converge with max|grad| = 1.49314 (tol = 0.001, component 1)\"\n",
       "Correlation matrix not shown by default, as p = 16 > 12.\n",
       "Use print(obj, correlation=TRUE)  or\n",
       "\t vcov(obj)\t if you need it\n",
@@ -519,42 +486,42 @@
        "    similar_sim + prior_number_virtual_labs + overall.POCC +  \n",
        "    PC1 + PC2 + (1 | sid)\n",
        "   Data: cvs_data\n",
-       "Control: glmerControl(optimizer = \"bobyqa\", optCtrl = list(maxfun = 500))\n",
+       "Control: glmerControl(optimizer = \"bobyqa\", optCtrl = list(maxfun = 200))\n",
        "\n",
        "     AIC      BIC   logLik deviance df.resid \n",
-       "  1226.3   1319.5   -596.1   1192.3     1759 \n",
+       "  1227.7   1320.8   -596.8   1193.7     1759 \n",
        "\n",
        "Scaled residuals: \n",
        "    Min      1Q  Median      3Q     Max \n",
-       "-2.8484 -0.1451 -0.0353  0.1484  4.5727 \n",
+       "-2.8179 -0.1571 -0.0414  0.1597  4.4709 \n",
        "\n",
        "Random effects:\n",
        " Groups Name        Variance Std.Dev.\n",
-       " sid    (Intercept) 30.25    5.5     \n",
+       " sid    (Intercept) 25.6     5.06    \n",
        "Number of obs: 1776, groups:  sid, 148\n",
        "\n",
        "Fixed effects:\n",
        "                          Estimate Std. Error z value Pr(>|z|)    \n",
-       "(Intercept)               -5.76944    3.50842  -1.644  0.10008    \n",
-       "variableArea              -1.14230    0.27538  -4.148 3.35e-05 ***\n",
-       "variableSeparation        -1.26971    0.27622  -4.597 4.29e-06 ***\n",
-       "variableWidth             -0.64703    0.24343  -2.658  0.00786 ** \n",
-       "sim_index2                 1.69857    0.19801   8.578  < 2e-16 ***\n",
-       "pre_statement1            -0.52346    0.35434  -1.477  0.13960    \n",
-       "modelqual                 -0.49972    0.29885  -1.672  0.09449 .  \n",
-       "modelquant                -0.16558    0.24963  -0.663  0.50714    \n",
-       "lab_experience1            4.76808    1.95554   2.438  0.01476 *  \n",
-       "similar_sim1              -0.42377    0.30806  -1.376  0.16894    \n",
-       "prior_number_virtual_labs  0.70075    0.63393   1.105  0.26899    \n",
-       "overall.POCC              -0.02031    0.23163  -0.088  0.93012    \n",
-       "PC1                        0.13579    0.47598   0.285  0.77542    \n",
-       "PC2                        0.95742    0.57774   1.657  0.09749 .  \n",
-       "pre_statement1:modelqual   1.22763    0.52878   2.322  0.02025 *  \n",
-       "pre_statement1:modelquant  0.56461    0.65793   0.858  0.39080    \n",
+       "(Intercept)               -5.61256    3.23115  -1.737   0.0824 .  \n",
+       "variableArea              -1.12627    0.27277  -4.129 3.64e-05 ***\n",
+       "variableSeparation        -1.23372    0.27336  -4.513 6.39e-06 ***\n",
+       "variableWidth             -0.62138    0.24131  -2.575   0.0100 *  \n",
+       "sim_index2                 1.67351    0.19602   8.538  < 2e-16 ***\n",
+       "pre_statement1            -0.56103    0.35155  -1.596   0.1105    \n",
+       "modelqual                 -0.50728    0.29622  -1.713   0.0868 .  \n",
+       "modelquant                -0.17604    0.24749  -0.711   0.4769    \n",
+       "lab_experience1            4.41925    1.82628   2.420   0.0155 *  \n",
+       "similar_sim1              -0.42617    0.30484  -1.398   0.1621    \n",
+       "prior_number_virtual_labs  0.44715    0.57510   0.778   0.4369    \n",
+       "overall.POCC               0.03148    0.21215   0.148   0.8821    \n",
+       "PC1                        0.07946    0.43657   0.182   0.8556    \n",
+       "PC2                        0.75562    0.52644   1.435   0.1512    \n",
+       "pre_statement1:modelqual   1.26846    0.52414   2.420   0.0155 *  \n",
+       "pre_statement1:modelquant  0.58914    0.65185   0.904   0.3661    \n",
        "---\n",
        "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
        "convergence code: 1\n",
-       "Model failed to converge with max|grad| = 0.681577 (tol = 0.001, component 1)\n",
+       "Model failed to converge with max|grad| = 1.49314 (tol = 0.001, component 1)\n",
        "maxfun < 10 * length(par)^2 is not recommended.\n"
       ]
      },
@@ -585,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -771,9 +738,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(predvars, data, env): object 'CVS_graph_3' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(predvars, data, env): object 'CVS_graph_3' not found\nTraceback:\n",
+      "1. glmer(CVS_graph_3 ~ pre + variable + sim_index + level_experience_sims + \n .     experience_undergrad_labs + used_similar_sim + (1 | sid), \n .     data = mydata, family = binomial, control = glmerControl(optimizer = \"bobyqa\"), \n .     nAGQ = 10)",
+      "2. eval(mc, parent.frame(1L))",
+      "3. eval(mc, parent.frame(1L))",
+      "4. lme4::glFormula(formula = CVS_graph_3 ~ pre + variable + sim_index + \n .     level_experience_sims + experience_undergrad_labs + used_similar_sim + \n .     (1 | sid), data = mydata, family = binomial, control = glmerControl(optimizer = \"bobyqa\"), \n .     nAGQ = 10)",
+      "5. eval(mf, parent.frame())",
+      "6. eval(mf, parent.frame())",
+      "7. stats::model.frame(data = mydata, drop.unused.levels = TRUE, \n .     formula = CVS_graph_3 ~ pre + variable + sim_index + level_experience_sims + \n .         experience_undergrad_labs + used_similar_sim + (1 + sid))",
+      "8. model.frame.default(data = mydata, drop.unused.levels = TRUE, \n .     formula = CVS_graph_3 ~ pre + variable + sim_index + level_experience_sims + \n .         experience_undergrad_labs + used_similar_sim + (1 + sid))",
+      "9. eval(predvars, data, env)",
+      "10. eval(predvars, data, env)"
+     ]
+    }
+   ],
    "source": [
     "mydata$variable <- relevel(mydata$variable, \"Concentration\")\n",
     "\n",
