Redoes prelinary analysis for highest model data and adds descriptives

--- a/analysis/data_log_to_worksheet_by_model_connector.ipynb
+++ b/analysis/data_log_to_worksheet_by_model_connector.ipynb
@@ -897,6 +897,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Factors</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10127163</td>\n",
+       "      <td>ABSORBANCE</td>\n",
+       "      <td>p</td>\n",
+       "      <td>Concentration</td>\n",
+       "      <td>qual</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10127163</td>\n",
+       "      <td>ABSORBANCE</td>\n",
+       "      <td>p</td>\n",
+       "      <td>Wavelength</td>\n",
+       "      <td>qual</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10127163</td>\n",
+       "      <td>ABSORBANCE</td>\n",
+       "      <td>p</td>\n",
+       "      <td>Width</td>\n",
+       "      <td>qual</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10129163</td>\n",
+       "      <td>ABSORBANCE</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Concentration</td>\n",
+       "      <td>qual</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10129163</td>\n",
+       "      <td>ABSORBANCE</td>\n",
+       "      <td>m</td>\n",
+       "      <td>Wavelength</td>\n",
+       "      <td>qual</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID       Topic Type        Factors Model  Correct\n",
+       "0    10127163  ABSORBANCE    p  Concentration  qual      0.0\n",
+       "1    10127163  ABSORBANCE    p     Wavelength  qual      0.0\n",
+       "2    10127163  ABSORBANCE    p          Width  qual      0.0\n",
+       "3    10129163  ABSORBANCE    m  Concentration  qual      1.0\n",
+       "4    10129163  ABSORBANCE    m     Wavelength  qual      0.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "worksheets_L.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
