--- a/analysis_AIED_submission_deprecated/storyline_for_aied_poster.ipynb
+++ b/analysis_AIED_submission_deprecated/storyline_for_aied_poster.ipynb
@@ -14,7 +14,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true,
     "scrolled": true
@@ -43,7 +42,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -75,7 +73,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -88,8 +85,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
-    "hidden": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -120,7 +115,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -133,7 +127,6 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -148,7 +141,6 @@
    "execution_count": 5,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -165,7 +157,6 @@
    "execution_count": 6,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -205,7 +196,6 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -217,7 +207,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -230,7 +219,6 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -258,7 +246,6 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -295,7 +282,6 @@
    "execution_count": 10,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -309,7 +295,6 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -337,7 +322,6 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -369,9 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Putting it all together"
    ]
@@ -381,7 +363,6 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -395,9 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Adding wrapper use data"
    ]
@@ -405,10 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -493,18 +469,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Everyone uses the table once and 85% use the graph once. Lets redo the analysis only with students who used the graph"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Adding pre-survey data"
    ]
@@ -512,10 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -606,8 +575,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -622,9 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We add a \"CVS_levels\" column to our data (graph=2, table=1, none=0)"
    ]
@@ -632,10 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -667,10 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1069,10 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1125,9 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Exporting the data"
    ]
@@ -1136,8 +1091,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1149,7 +1103,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1162,7 +1115,6 @@
    "execution_count": 21,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1191,7 +1143,6 @@
    "execution_count": 22,
    "metadata": {
     "collapsed": true,
-    "hidden": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1232,7 +1183,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "hideCode": true,
     "hidePrompt": true
@@ -1255,7 +1205,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "hideCode": true,
     "hidePrompt": true
@@ -1301,7 +1250,6 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "hideCode": true,
     "hidePrompt": true
@@ -1350,7 +1298,6 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1389,7 +1336,6 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "hideCode": true,
     "hidePrompt": true
@@ -1445,7 +1391,6 @@
     "code_folding": [
      0
     ],
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -1565,7 +1510,6 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1667,7 +1611,6 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true,
     "scrolled": true
@@ -1728,9 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1853,9 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1941,9 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1963,9 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2013,9 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2049,9 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2235,9 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2340,9 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2581,9 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2634,7 +2559,6 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -2709,9 +2633,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2762,7 +2684,6 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "scrolled": true
    },
@@ -3041,7 +2962,6 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -3064,7 +2984,6 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -3107,7 +3026,6 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false,
     "hidden": true
    },
    "outputs": [
@@ -3151,7 +3069,6 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false,
     "hidden": true,
     "hideCode": true,
     "hidePrompt": true,
@@ -3395,7 +3312,6 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3560,9 +3476,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3645,7 +3559,6 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3884,9 +3797,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4006,9 +3917,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4025,9 +3934,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4088,7 +3995,6 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -4179,9 +4085,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4253,9 +4157,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4357,9 +4259,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4499,9 +4399,9 @@
   "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python [Anaconda2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Anaconda2]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4513,7 +4413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   },
   "toc": {
    "nav_menu": {},
